--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -401,6 +401,21 @@ form button:hover {
     background-color: var(--linkColor);
 }
 
+@media(max-height: 860px){
+        
+    header {
+        width: 100%;
+        height: 100vh;
+        display: flex;
+        align-items: center;
+        position: relative;
+        color: var(--brightColor);
+        background-color: var(--primaryColor);
+        background-image: none;
+        z-index: 3;
+    }
+}
+
 @media(max-width: 830px){
 
     header {
